<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="400dip"
        android:background="@drawable/screen_border"
        android:gravity="top"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/screenHeaderChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/screen_heading_border"
            android:gravity="top"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:gravity="center"
                android:text="@string/screen_changePassword"
                android:textSize="30sp" />

            <View
                android:id="@+id/separator"
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:background="@android:color/darker_gray"
                android:visibility="visible" />
            
        </LinearLayout>

        <EditText
            android:id="@+id/oldPasswordText"
            style="@style/passtext"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/oldPassword" />

        <EditText
            android:id="@+id/newPasswordText"
            style="@style/passtext"
            android:layout_marginStart="10dp"
            android:hint="@string/newPassword" />

        <EditText
            android:id="@+id/rNewPasswordText"
            style="@style/passtext"
            android:layout_marginStart="10dp"
            android:hint="@string/reNewPassword" />

        <LinearLayout
            android:id="@+id/RelativeLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bCancel"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:onClick="doCancel"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/cpBConfirm"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="doChangePassword"
                android:text="@string/confirm" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>